force-app/main/default/objects/Activity/fields/Additional_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Additional_Attendees__c</fullName>
    <description>Used to store multiple attendees email ids.</description>
    <label>Additional Attendees</label>
    <type>TextArea</type>
</CustomField>