force-app/main/default/objects/Activity/fields/Appointment_created_via__c.field-meta.xml
<CustomField>
    <fullName>Appointment_created_via__c</fullName>
    <description>It is used to identify whether the appointment was created via EHR or the portal.</description>
    <inlineHelpText>Denotes the platforms this appointment is created from</inlineHelpText>
    <label>Appointment created via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EHR</fullName>
            </value>
            <value>
                <fullName>Patient Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>