force-app/main/default/objects/Activity/fields/Appointment_Interval__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Interval__c</fullName>
    <description>Represents the interval or duration of the appointment.</description>
    <formula>(  ActivityDateTime  -  NOW())  * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>