force-app/main/default/objects/Activity/fields/Appointment_Interval_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Interval_In_Days__c</fullName>
    <description>This field represents the interval between the appointment start date and the current date</description>
    <formula>DATEVALUE(ActivityDateTime) - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Interval In Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>