force-app/main/default/objects/Activity/fields/Appointment_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type_1__c</fullName>
    <description>Identifies the type of appointment associated with the event.</description>
    <label>Appointment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>