force-app/main/default/objects/Activity/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <description>Identifies the type of appointment associated with the event.</description>
    <label>Appointment Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>