force-app/main/default/objects/Activity/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field describes whether the patient has attended the session or not</description>
    <label>Attendance</label>
    <type>Checkbox</type>
</CustomField>