force-app/main/default/objects/Activity/fields/By_Pass_Check__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Check__c</fullName>
    <description>Flags whether to bypass existing bookings.</description>
    <defaultValue>false</defaultValue>
    <label>By pass existing bookings?</label>
    <type>Checkbox</type>
</CustomField>