force-app/main/default/objects/Activity/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <description>Represents the associated appointment with a specific care episode.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Episode</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Visit Summary</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>