force-app/main/default/objects/Activity/fields/Checked_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_Date_Time__c</fullName>
    <description>Records the date and time when appointment checked in.</description>
    <label>Checked-In Date/Time</label>
    <type>DateTime</type>
</CustomField>