force-app/main/default/objects/Activity/fields/Co_Facilitator1__c.field-meta.xml
<CustomField>
    <fullName>Co_Facilitator1__c</fullName>
    <description>Represents the co-facilitator or user associated with the appointment.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co Facilitator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>