force-app/main/default/objects/Activity/fields/Co_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Co_Facilitator__c</fullName>
    <description>Specifies the co-facilitator associated with the appointment.</description>
    <label>Co_Facilitator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>