force-app/main/default/objects/Activity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>For storing the appointment’s additional notes or comments into the system.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>