force-app/main/default/objects/Activity/fields/Event_Data_Object__c.field-meta.xml
<CustomField>
    <fullName>Event_Data_Object__c</fullName>
    <description>Represents the data object associated with the event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Data Object</label>
    <referenceTo>Event_Data_Object__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>