force-app/main/default/objects/Activity/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <description>Represents the facilitator assigned to the appointment.</description>
    <label>Facilitator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>