force-app/main/default/objects/Activity/fields/Form_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Unique_Id__c</fullName>
    <description>This is an internal field and stores the unique identifier for the associated form.</description>
    <label>Form Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>