force-app/main/default/objects/Activity/fields/Is_custom_screen__c.field-meta.xml
<CustomField>
    <fullName>Is_custom_screen__c</fullName>
    <description>Flags whether the event is a custom screen.</description>
    <defaultValue>false</defaultValue>
    <label>Is custom screen</label>
    <type>Checkbox</type>
</CustomField>