force-app/main/default/objects/Activity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Represents the provider location associated with appointment.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Provider__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>