force-app/main/default/objects/Activity/fields/Notification_Interval__c.field-meta.xml
<CustomField>
    <fullName>Notification_Interval__c</fullName>
    <description>Specifies the interval for event notifications.</description>
    <formula>( NOW() - Patient_Notified__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>