force-app/main/default/objects/Activity/fields/Patient_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Patient_End_Time__c</fullName>
    <description>Records the end time for the patient during the event.</description>
    <label>Patient End Time</label>
    <length>12</length>
    <type>Text</type>
</CustomField>