force-app/main/default/objects/Activity/fields/Patient_Notified__c.field-meta.xml
<CustomField>
    <fullName>Patient_Notified__c</fullName>
    <description>Records the date and time when the patient has been notified.</description>
    <label>Patient Notified</label>
    <type>DateTime</type>
</CustomField>