force-app/main/default/objects/Activity/fields/Patient_s_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Time_Zone__c</fullName>
    <description>Captures the time zone of the patient for the event.</description>
    <label>Patient&apos;s Time Zone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>