force-app/main/default/objects/Activity/fields/Patient_Start_TIme__c.field-meta.xml
<CustomField>
    <fullName>Patient_Start_TIme__c</fullName>
    <description>Records the start time for the patient during the event.</description>
    <label>Patient Start Time</label>
    <length>200</length>
    <type>Text</type>
</CustomField>