force-app/main/default/objects/Activity/fields/Plan_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Plan_Hierarchy__c</fullName>
    <description>Specifies the hierarchy plan associated with the event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Hierarchy</label>
    <referenceTo>Plan_Hierarchy__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>