force-app/main/default/objects/Activity/fields/Plan_SubHierarchy__c.field-meta.xml
<CustomField>
    <fullName>Plan_SubHierarchy__c</fullName>
    <description>Specifies the sub-hierarchy plan associated with the event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan SubHierarchy</label>
    <referenceTo>Plan_SubHierarchy__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>