force-app/main/default/objects/Activity/fields/Practitioner_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_End_Time__c</fullName>
    <description>Records the end time for the practitioner during the event.</description>
    <label>Practitioner End Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>