force-app/main/default/objects/Activity/fields/Practitioner_s_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_s_Time_Zone__c</fullName>
    <description>Captures the time zone of the practitioner for the event.</description>
    <label>Practitioner&apos;s Time Zone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>