force-app/main/default/objects/Activity/fields/Practitioner_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Start_Time__c</fullName>
    <description>Records the start time for the practitioner during the appointment.</description>
    <label>Practitioner Start Time</label>
    <length>200</length>
    <type>Text</type>
</CustomField>