force-app/main/default/objects/Activity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Specifies the detailed reason for the event.</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>