force-app/main/default/objects/Activity/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <description>Represents the specific business room associated with provider location for appointment.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Room</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>