force-app/main/default/objects/Activity/fields/Schedule_Zoom_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Zoom_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On enabling it will schedule the meeting</description>
    <label>Schedule Zoom Meeting</label>
    <type>Checkbox</type>
</CustomField>