force-app/main/default/objects/Activity/fields/TechTracking_ID__c.field-meta.xml
<CustomField>
    <fullName>TechTracking_ID__c</fullName>
    <description>Stores the technical tracking ID associated with the event.</description>
    <label>TechTracking ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>