force-app/main/default/objects/Activity/fields/Template_Problem__c.field-meta.xml
<CustomField>
    <fullName>Template_Problem__c</fullName>
    <description>Represents any template problems associated with the event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Problem</label>
    <referenceTo>Template_Problem__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_TP</relationshipName>
    <type>Lookup</type>
</CustomField>