force-app/main/default/objects/Activity/fields/Virtual_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Meeting_Link__c</fullName>
    <description>Used to store meeting id.</description>
    <label>Virtual Meeting Link</label>
    <type>Url</type>
</CustomField>