force-app/main/default/objects/Activity/fields/Work_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>Work_Schedule_Id__c</fullName>
    <description>Associates the event with a specific work schedule.</description>
    <label>Work Schedule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>